// Copyright (c) 2000-2015 TeamDev Ltd. All rights reserved.
// TeamDev PROPRIETARY and CONFIDENTIAL.
// Use is subject to license terms.
syntax = "proto3";

package spine3.base;

option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_outer_classname = "ServerProto";
option java_package = "org.spine3.base";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "spine3/base/command.proto";

// Built-in event type for storing aggregate root snapshots.
message Snapshot {
    // The version of the aggregate root at which the snapshot was made.
    int32 version = 1;
    // The state of the aggregate root.
    google.protobuf.Any state = 2;
    // Time when the stored state of the aggregate root was modified.
    // This value is copied to the aggregated root when the snapshot is restored.
    google.protobuf.Timestamp whenLastModified = 3;
}

// This type defines the way events are stored in an external media.
// Some of the fields are defined as string representation of corresponding message types
// so that these fields are available for querying.
message EventStoreRecord {
    // Json representation of an aggregate id.
    string aggregate_id = 1;
    // The type of the event as defined in Protobuf.
    string event_type = 2;
    // Json representation of EventId.
    string event_id = 3;
    // The version of the aggregate root after the event was applied.
    int32 version = 5;
    // Event data and context.
    EventRecord eventRecord = 6;
}